--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="Head1">Vegetables</div>
         <div class="btn_group">
             <div class="btn_facebook btning">
-                <img src="img/btn_facebook.png" alt="Facebook">
+                <img src="btn_facebook.png" alt="Facebook">
 
             </div>
             <div class="btn_instagram">
-                <img src="img/btn_instagram.png" alt="Instagram">
+                <img src="btn_instagram.png" alt="Instagram">
             </div>
 
             <div class="line">
-                <img src="img/line.svg" alt="line">
+                <img src="line.svg" alt="line">
             </div>
 
             <div class="btn_group">
@@ -43,15 +43,15 @@
             </ul>
         </nav>
         <div class="box_main_content">
-            <img src="img/img_main_pumpkin.png" alt="pumpkin" class="img_main_pumpkin">
+            <img src="img_main_pumpkin.png" alt="pumpkin" class="img_main_pumpkin">
         </div>
         <div class="box_info">
             <div class="box_info_left box_info_item">
                 <div class="box_vegetables_title box_info_title"><span class="Head2">Vegetables</span></div>
                 <div class="box_vegetables_content">
-                    <div class="box_vegetables_content_item"><img src="img/img_vegetables_pepper.png" alt="pepper" class="img_vegetables_pepper"></div>
-                    <div class="box_vegetables_content_item"><img src="img/img_vegetables_carrot.png" alt="carrot" class="img_vegetables_carrot"></div>
-                    <div class="box_vegetables_content_item"><img src="img/img_vegetables_corn.png" alt="corn" class="img_vegetables_corn"></div>
+                    <div class="box_vegetables_content_item"><img src="img_vegetables_pepper.png" alt="pepper" class="img_vegetables_pepper"></div>
+                    <div class="box_vegetables_content_item"><img src="img_vegetables_carrot.png" alt="carrot" class="img_vegetables_carrot"></div>
+                    <div class="box_vegetables_content_item"><img src="img_vegetables_corn.png" alt="corn" class="img_vegetables_corn"></div>
                 </div>
             </div>
             <div class="box_info_right box_info_item">
